--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "org.nativescript.NativeFinds"
+    "id": "org.nativescript.NativeFinds",
+    "tns-ios": {
+      "version": "4.1.1"
+    }
   },
   "dependencies": {
     "@angular/animations": "~6.0.6",
@@ -16,8 +19,11 @@
     "@angular/platform-browser": "~6.0.6",
     "@angular/platform-browser-dynamic": "~6.0.6",
     "@angular/router": "~6.0.6",
+    "core-js": "^2.5.7",
+    "lodash": "^4.17.10",
     "nativescript-angular": "~6.0.6",
     "nativescript-theme-core": "~1.0.4",
+    "ngx-restangular": "^3.0.0",
     "reflect-metadata": "~0.1.10",
     "rxjs": "~6.1.0",
     "tns-core-modules": "4.1.1",
