--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "id": "org.nativescript.NativeFinds",
     "tns-ios": {
       "version": "4.1.1"
+    },
+    "tns-android": {
+      "version": "4.1.3"
     }
   },
   "dependencies": {
@@ -30,10 +33,14 @@
     "zone.js": "~0.8.18"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "~6.1.0-beta.3",
+    "@ngtools/webpack": "6.1.0-rc.0",
+    "babel-traverse": "6.26.0",
+    "babel-types": "6.26.0",
+    "babylon": "6.18.0",
+    "lazy": "1.0.11",
     "nativescript-dev-typescript": "~0.7.0",
     "nativescript-dev-webpack": "~0.14.0",
-    "typescript": "~2.7.2",
-    "@angular/compiler-cli": "~6.1.0-beta.3",
-    "@ngtools/webpack": "6.1.0-rc.0"
+    "typescript": "~2.7.2"
   }
 }
